<resources>
    <string name="app_name">LaPetiteHistoire</string>
    <string name="titre_app">La petite histoire</string>
    <string name="boutonLire">Lire</string>
    <string name="boutonParam">Paramètres</string>
    <string name="boutonFav">Favoris</string>
    <string name="toutesleshistoires">Les histoires</string>
    <string name="histoire2min">2 min</string>
    <string name="histoire5min">5 min</string>
    <string name="histoire10min">10 min</string>
    <string name="histoire30min">30 min</string>
    <string name="boutonPrecedent">&lt; Précédent</string>
    <string name="syncroHist">Synchroniser les histoire à minuit :    </string>
    <string name="histoireAlea">Histoire au hasard en secouant :     </string>
    <string name="partageHistoire">Autoriser le partage des histoires :     </string>
    <string name="histoire">blablabla</string>
    <string name="titre_fav">Histoire Favorite</string>
    <string name="texte_fav">Pas encore d\'histoire favorite ici!</string>
    <string name="Titre2_1">Grand hôtel, petit oiseau</string>
    <string name="Titre2_2">Des vacances quatre étoiles</string>
    <string name="Titre2_3">La rentrée</string>
    <string name="Titre5_1">Oyster Catcher</string>
    <string name="Titre5_2">Que la magie scénique vous accompagne !</string>
    <string name="Titre5_3">Orologio</string>
    <string name="Titre10_1">Gaspar le hardi</string>
    <string name="Titre10_2">La doublure du Père Noël</string>
    <string name="Titre30_1">Tout au fond du jardin</string>
    <string name="Histoire2_1"> Le soleil caressa la joue de Fuku qui s’éveilla en bâillant. Elle s’étira, roula sur le côté, sentit le vide du bord du matelas et se cramponna aux draps ! Cette cascade matinale la réveilla complètement : elle sauta hors du lit. \n

    — Maman ? Papa ? appela-t-elle en avançant dans la chambre.\n

    Pas de réponse. La grande horloge au pendule en cuivre indiquait dix heures du matin. Déjà ! Étonnant que personne ne soit venu la réveiller… Elle pénétra dans la chambre à la tapisserie fleurie. Ici aussi, tout était vide… Peut-être étaient-ils descendus déjeuner ? Elle s’approcha de la fenêtre. Dehors, un beau soleil brillait. Près de la piscine, les chaises longues étaient vides, les petits déjeuners intacts… Le vent feuilletait les pages d’un magazine délaissé… \n

    Inquiète, Fuku dévala les marches de marbre de l’escalier de l’hôtel Belle Brise. \n

    Elle ne croisa personne, ses cris et appels restèrent sans réponse. Dans le hall, elle sonna plusieurs fois à la clochette de l’accueil mais personne ne se montra. \n

    Fuku se rua aux portes qui donnaient sur les jardins et essaya de les ouvrir… Verrouillées ! Son cœur se mit à battre la chamade, elle sentit la panique la gagner. \n

    Soudain, le bruit d’un battement d’ailes retentit derrière elle. Elle se retourna prudemment et se retrouva nez à nez avec… un colibri ! \n
    L’oiseau, guère plus gros qu’une balle de ping-pong, noir comme du charbon et au long bec rouge comme un piment la regardait de ses petits yeux brillants… \n

    — Un colibri ! hoqueta Fuku. Dis-moi, tu sais où sont mes parents ? \n

    Le colibri partit comme une fusée. Fuku, s’élançant alors à sa poursuite, traversa des couloirs sombres, passa des réfectoires tranquilles, des cuisines et des grandes salles de bals, quand, enfin, le colibri s’arrêta face à une haute porte de verre… \n

    — Quoi ? C’est là ? dit Fuku, légèrement essoufflée. Dans la serre ? \n

    Le colibri pépia, et Fuku s’avança… Elle poussa doucement la porte… L’endroit était plongé dans une obscurité inquiétante. \n

    — Joyeux anniversaire ! s’écria soudain un chœur de voix, dans un déluge de lumière. \n

    C’étaient ses parents ! Et aussi les membres de l’hôtel et les autres vacanciers, réunis au milieu de fleurs sauvages et de ballons ! \n

    Son anniversaire ! Bien sûr ! Un sourire se dessina sur le visage de Fuku, et, le colibri sur son épaule, elle partit d’un grand rire dans une envolée de papillons.
</string>
    <string name="Histoire2_2">Bachir regardait les rayons du soleil entrer par la fenêtre. Il faisait un temps magnifique, mais il était obligé d’attendre ici, dans l’ombre du grand réfectoire de l’internat du collège des Mimosas. \n

    L’endroit était calme. Un souffle de vent poussait par moment la porte du bâtiment dans un grincement sourd. Une jeune surveillante attendait également, un peu plus loin. À part eux deux, le bâtiment était vide. Un à un, amis comme surveillants, tous étaient partis avec leur famille. \n

    Où sont mes parents ? se demanda Bachir, m’ont-ils oublié ? Il serra contre lui son sac au dessin d’astronaute. \n

    — Tu vas bien ? demanda la surveillante en s’approchant. Tu attends tes parents ? \n

    — Oui, répondit-il tristement. Et toi ? \n

    La jeune fille eut un sourire triste. \n

    — Oh, je n’attends plus personne maintenant. Mais tu vas voir, je suis sûre qu’ils vont vite arriver ! \n

    — J’espère, dit Bachir. Je commence à avoir faim ! \n

    — Tu es un vrai estomac sur pattes, dis-donc ! Regarde dans le ciel, dit-elle pour changer de sujet, une étoile vient d’apparaître ! \n

    — C’est vrai… Il n’est pas un peu tôt ? \n

    — Ce doit être une étoile très matinale ! \n

    — Elle est vraiment grosse, cette étoile, remarqua Bachir, fasciné. \n

    — Oui. Et elle grossit… de plus en plus… Attention ! \n

    La jeune fille sauta à terre mettant Bachir à l’abri alors que l’étoile s’écrasait dans la cour ! \n

    La fumée se dissipa et Bachir et la jeune fille se relevèrent, tout poussiéreux, pour se retrouver devant… une fusée ! Sa porte s’ouvrit, et deux cosmonautes en sortirent. Bachir les reconnut aussitôt. \n

    — Maman, Papa ! s’exclama-t-il. \n

    — Quel retard ! dit Maman. Des embouteillages tout autour de Jupiter ! \n

    — Oui, confirma Papa. Nous avons dû prendre une pluie d’étoiles filantes, et nous voilà ! \n

    — Tu viens Bachir ? Les mers gazeuses de Trappist-1e sont les plus belles à cette période de l’année, toi qui aime tant te baigner ! \n

    — Bien sûr ! s’exclama Bachir en attrapant son sac à dos. Il se retourna vers la jeune fille. Tu viens avec nous ? lui demanda-t-il. \n

    — Pourquoi pas, dit-elle dans un sourire. Je n’ai jamais vu la mer ! \n

    Et tous les quatre, ils partirent vers les étoiles.</string>
    <string name="Histoire2_3">
        Thomas a mis ses jolis souliers neufs. Normal, c’est la rentrée !

Un peu plus tôt, lorsque le réveil a sonné, Thomas s’est levé d’un bond.

Il faut dire que cela faisait déjà une bonne heure qu’il regardait, comme hypnotisé, les chiffres de son radio-réveil défiler, minute après minute, en se demandant si une faille spatio-temporelle allait l’engloutir pour l’emmener dans un autre monde.

Thomas a peur. Juste un peu. Mais la pétoche quand même.

À chaque rentrée, c’est la même chose. Le trac, la trouille l’étreignent et lui triturent les tripes ! Oui, il en a mal au ventre !

Thomas se regarde dans le miroir, remet une dernière fois de l’ordre dans ses cheveux et attrape son cartable. Il sourit. Un sourire forcé.

— Allez, Thomas, secoue-toi, ça va bien se passer ! se sermonne-t-il.

Sur le chemin de l’école, la tension monte.

Emma sera-t-elle toujours aussi chipie et Anthony aussi bagarreur ?

Y aura-t-il encore de cet infâme gratin de chou-fleur qui sent des pieds à la cantine ?

Va-t-il réussir à trouver sa place dans cette immense cité scolaire ?

Le directeur sera-t-il aussi dur que dans son ancienne école ?

Et les punitions ! Ah là là ! Il va falloir faire attention !

Mais c’est déjà l’heure de se mettre en rang. Par deux. En silence.

Lorsque Thomas prend la parole, tout le monde est assis. C’est parti !

— Bonjour, je m’appelle Thomas et je suis votre nouveau maître cette année !
    </string>
</resources>