<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Secondaire"
    tools:context="com.example.rebierrequentin.lapetitehistoire.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            style="@style/Titre"
            android:text="@string/titre_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.113" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">


        </LinearLayout>

    <Button
        android:id="@+id/histoire2min"
        style="@style/BoutonClassique"
        android:text="@string/histoire2min"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/histoire5min"
        style="@style/BoutonClassique"
        android:text="@string/histoire5min"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/histoire10min"
        style="@style/BoutonClassique"
        android:text="@string/histoire10min"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/histoire30min"
        style="@style/BoutonClassique"
        android:text="@string/histoire30min"
        android:layout_gravity="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>